changes to kebabmenu horizontal and fixed alignment changes

--- a/src/client/flogo/packages/diagram/tiles/tile-branch.component.less
+++ b/src/client/flogo/packages/diagram/tiles/tile-branch.component.less
@@ -185,25 +185,18 @@
   font-size: 12px;
   position: absolute;
   top: 1px;
-  left: -26px;
+  left: -25px;
   background: white;
   z-index: 6;
   cursor: pointer;
 }
 
 .menu-icon-close {
-  .kebabmenu-option();
   color: #899bcf;
-  font-size: 0.65em;
-  position: relative;
-  height: 100%;
-  top: -0.75em;
+  position: absolute;
+  top: -0.1em;
+  left: -0.1em;
+  font-size: 1em;
   display: none;
 }
 
-.menu-icon-open {
-  .kebabmenu-option();
-  position: absolute;
-  top: 2px;
-  font-size: 10px;
-}
