--- a/src/client/flogo/packages/diagram/tiles/tile-task.component.less
+++ b/src/client/flogo/packages/diagram/tiles/tile-task.component.less
@@ -99,8 +99,8 @@
 
 .menu__icon {
   padding: 2px 4px;
-  margin-left: 5px;
-  margin-right: 5px;
+  margin-left: 4px;
+  margin-right: 4px;
 
   &:hover {
     color: @primary-blue;
@@ -111,10 +111,8 @@
 }
 
 .kebabmenu {
-  .kebabmenu-option();
-  height: 18px;
-  width: 13px;
-  padding-top: 3px;
+  padding-top: 2px;
+  font-size: 14px;
   &:hover {
     color: @primary-blue;
     background-color: rgba(0, 129, 203, 0.1);
@@ -342,19 +340,8 @@
   }
 }
 .options-open__icon {
-  .kebabmenu-option();
   color: @color-bg;
-  font-size: 0.8em;
-  position: absolute;
-  height: 100%;
-  top: 0;
-  left: -0.16em;
+  font-size: 1em;
   display: none;
-}
-.options-close__icon {
-  .kebabmenu-option();
-  position: absolute;
-  top: 2px;
-  font-size: 10px;
 }
 
